{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 98,
  "lineage": "ea921906-053c-a354-79a8-707aaf718867",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "five",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.100.1.15",
            "association_id": "eipassoc-0e74ef7db7cb16834",
            "domain": "vpc",
            "id": "eipalloc-0d4504e28d935f5ea",
            "instance": "i-06b0c4234746336e0",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0b49cfbda37b81a03",
            "private_dns": "ip-10-100-1-15.eu-west-3.compute.internal",
            "private_ip": "10.100.1.15",
            "public_dns": "ec2-35-180-177-29.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.177.29",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.srv5_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "four",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.100.1.14",
            "association_id": "eipassoc-0b2a4b08c4be79667",
            "domain": "vpc",
            "id": "eipalloc-07bf514d1810c0cc0",
            "instance": "i-0b3a812d4959e6439",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-049b0e6cd8ba585d7",
            "private_dns": "ip-10-100-1-14.eu-west-3.compute.internal",
            "private_ip": "10.100.1.14",
            "public_dns": "ec2-13-37-174-145.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.174.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.srv4_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.100.1.10",
            "association_id": "eipassoc-0c7c6dbb0b4416c69",
            "domain": "vpc",
            "id": "eipalloc-0af4a4b5dcb0e2df5",
            "instance": "i-0f8cec8cc6a688951",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-00443ebc834cf69e4",
            "private_dns": "ip-10-100-1-10.eu-west-3.compute.internal",
            "private_ip": "10.100.1.10",
            "public_dns": "ec2-13-36-89-164.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.89.164",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.srv1_nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.100.1.13",
            "association_id": "eipassoc-07e5f85fbe190dd2c",
            "domain": "vpc",
            "id": "eipalloc-0d166ca22776eedf7",
            "instance": "i-0341434cf186184d9",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-070c7434bb010b243",
            "private_dns": "ip-10-100-1-13.eu-west-3.compute.internal",
            "private_ip": "10.100.1.13",
            "public_dns": "ec2-15-236-216-85.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.216.85",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.srv3_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.100.1.12",
            "association_id": "eipassoc-0d89256ef6de4d72a",
            "domain": "vpc",
            "id": "eipalloc-0593d9a37093808c1",
            "instance": "i-09f0d986ad16cc889",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-02c95d83fe4b8a15e",
            "private_dns": "ip-10-100-1-12.eu-west-3.compute.internal",
            "private_ip": "10.100.1.12",
            "public_dns": "ec2-13-37-16-9.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.37.16.9",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_network_interface.srv2_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072056ff9d3689e7b",
            "arn": "arn:aws:ec2:eu-west-3:141067901722:instance/i-0f8cec8cc6a688951",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8cec8cc6a688951",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-00443ebc834cf69e4"
              }
            ],
            "primary_network_interface_id": "eni-00443ebc834cf69e4",
            "private_dns": "ip-10-100-1-10.eu-west-3.compute.internal",
            "private_ip": "10.100.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-024a0a05cb2956e81",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780",
            "tags": {
              "Name": "srv1"
            },
            "tags_all": {
              "Name": "srv1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b161bd22f6485a6"
            ]
          },
          "dependencies": [
            "aws_network_interface.srv1_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072056ff9d3689e7b",
            "arn": "arn:aws:ec2:eu-west-3:141067901722:instance/i-09f0d986ad16cc889",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f0d986ad16cc889",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02c95d83fe4b8a15e"
              }
            ],
            "primary_network_interface_id": "eni-02c95d83fe4b8a15e",
            "private_dns": "ip-10-100-1-12.eu-west-3.compute.internal",
            "private_ip": "10.100.1.12",
            "public_ip": "13.37.16.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce847f4dc8724de3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780",
            "tags": {
              "Name": "srv2"
            },
            "tags_all": {
              "Name": "srv2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b161bd22f6485a6"
            ]
          },
          "dependencies": [
            "aws_network_interface.srv2_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072056ff9d3689e7b",
            "arn": "arn:aws:ec2:eu-west-3:141067901722:instance/i-0341434cf186184d9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0341434cf186184d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-070c7434bb010b243"
              }
            ],
            "primary_network_interface_id": "eni-070c7434bb010b243",
            "private_dns": "ip-10-100-1-13.eu-west-3.compute.internal",
            "private_ip": "10.100.1.13",
            "public_ip": "15.236.216.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0526a21300a6c5b0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780",
            "tags": {
              "Name": "srv3"
            },
            "tags_all": {
              "Name": "srv3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b161bd22f6485a6"
            ]
          },
          "dependencies": [
            "aws_network_interface.srv3_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072056ff9d3689e7b",
            "arn": "arn:aws:ec2:eu-west-3:141067901722:instance/i-0b3a812d4959e6439",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b3a812d4959e6439",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-049b0e6cd8ba585d7"
              }
            ],
            "primary_network_interface_id": "eni-049b0e6cd8ba585d7",
            "private_dns": "ip-10-100-1-14.eu-west-3.compute.internal",
            "private_ip": "10.100.1.14",
            "public_ip": "13.37.174.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e05c90fc8c2d74c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780",
            "tags": {
              "Name": "srv4"
            },
            "tags_all": {
              "Name": "srv4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b161bd22f6485a6"
            ]
          },
          "dependencies": [
            "aws_network_interface.srv4_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "srv5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-072056ff9d3689e7b",
            "arn": "arn:aws:ec2:eu-west-3:141067901722:instance/i-06b0c4234746336e0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b0c4234746336e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_ssh_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0b49cfbda37b81a03"
              }
            ],
            "primary_network_interface_id": "eni-0b49cfbda37b81a03",
            "private_dns": "ip-10-100-1-15.eu-west-3.compute.internal",
            "private_ip": "10.100.1.15",
            "public_ip": "35.180.177.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a79693d06762cb0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780",
            "tags": {
              "Name": "srv5"
            },
            "tags_all": {
              "Name": "srv5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06b161bd22f6485a6"
            ]
          },
          "dependencies": [
            "aws_network_interface.srv5_nic",
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141067901722:internet-gateway/igw-010d5df569f782960",
            "id": "igw-010d5df569f782960",
            "owner_id": "141067901722",
            "tags": {
              "Name": "IGW"
            },
            "tags_all": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-02b840f08e6fc59c0"
          },
          "dependencies": [
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "srv1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a003f744dbf82aa6",
                "device_index": 0,
                "instance": "i-0f8cec8cc6a688951"
              }
            ],
            "id": "eni-00443ebc834cf69e4",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:c3:2d:aa:38:0a",
            "private_ip": "10.100.1.10",
            "private_ips": [
              "10.100.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06b161bd22f6485a6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780"
          },
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "srv2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-077bc728b14431ef4",
                "device_index": 0,
                "instance": "i-09f0d986ad16cc889"
              }
            ],
            "id": "eni-02c95d83fe4b8a15e",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:db:23:be:e6:94",
            "private_ip": "10.100.1.12",
            "private_ips": [
              "10.100.1.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06b161bd22f6485a6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780"
          },
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "srv3_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0ab229a50d24b4765",
                "device_index": 0,
                "instance": "i-0341434cf186184d9"
              }
            ],
            "id": "eni-070c7434bb010b243",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:c4:c3:ff:cf:68",
            "private_ip": "10.100.1.13",
            "private_ips": [
              "10.100.1.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06b161bd22f6485a6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780"
          },
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "srv4_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0a3b5cdcbca1bb7fb",
                "device_index": 0,
                "instance": "i-0b3a812d4959e6439"
              }
            ],
            "id": "eni-049b0e6cd8ba585d7",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:a4:fc:bd:6e:5c",
            "private_ip": "10.100.1.14",
            "private_ips": [
              "10.100.1.14"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06b161bd22f6485a6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780"
          },
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "srv5_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0b715c96cf9e21fc9",
                "device_index": 0,
                "instance": "i-06b0c4234746336e0"
              }
            ],
            "id": "eni-0b49cfbda37b81a03",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "06:d5:83:55:1e:94",
            "private_ip": "10.100.1.15",
            "private_ips": [
              "10.100.1.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06b161bd22f6485a6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe61f8ac3e6c780"
          },
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "certif_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141067901722:route-table/rtb-0a6ec8415eec8400c",
            "id": "rtb-0a6ec8415eec8400c",
            "owner_id": "141067901722",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010d5df569f782960",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-010d5df569f782960",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "certif_rt"
            },
            "tags_all": {
              "Name": "certif_rt"
            },
            "vpc_id": "vpc-02b840f08e6fc59c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b53e29c92bbcf46",
            "route_table_id": "rtb-0a6ec8415eec8400c",
            "subnet_id": "subnet-06fe61f8ac3e6c780"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.certif_rt",
            "aws_subnet.certif_subnet",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141067901722:security-group/sg-06b161bd22f6485a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06b161bd22f6485a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab_sg",
            "name_prefix": "",
            "owner_id": "141067901722",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_lab_certif"
            },
            "tags_all": {
              "Name": "allow_lab_certif"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b840f08e6fc59c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_local_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.100.0.0/16"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-893215136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06b161bd22f6485a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "dns_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 53,
            "id": "sgrule-1515885250",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-06b161bd22f6485a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eg_allow_all__sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1741399267",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06b161bd22f6485a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "http_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4098536121",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b161bd22f6485a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ping_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-1514432030",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "icmp",
            "security_group_id": "sg-06b161bd22f6485a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1261925834",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b161bd22f6485a6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lab_sg",
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "certif_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141067901722:subnet/subnet-06fe61f8ac3e6c780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.100.1.0/24",
            "id": "subnet-06fe61f8ac3e6c780",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "141067901722",
            "tags": {
              "Name": "certif subnet"
            },
            "tags_all": {
              "Name": "certif subnet"
            },
            "vpc_id": "vpc-02b840f08e6fc59c0"
          },
          "dependencies": [
            "aws_vpc.vpc_certif"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_certif",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:141067901722:vpc/vpc-02b840f08e6fc59c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-02c0e2398c8d2872a",
            "default_route_table_id": "rtb-0718793ff955c59d7",
            "default_security_group_id": "sg-0c291e4798ca2dbec",
            "dhcp_options_id": "dopt-fd5b8795",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02b840f08e6fc59c0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0718793ff955c59d7",
            "owner_id": "141067901722",
            "tags": {
              "Name": "vpc_cerfif"
            },
            "tags_all": {
              "Name": "vpc_cerfif"
            }
          }
        }
      ]
    }
  ]
}